<resources>
    <string name="app_name">Learning App</string>
    <string name="txt_welcome_back">Welcome back</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_click_here"><u> Click here </u></string>
    <string name="title_activity_drawer_home">DrawerHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>