<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_welcome_back"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="monospace"
        android:layout_marginBottom="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginVertical="8dp"
        android:hint="@string/txt_email"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/deep_purple">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginVertical="8dp"
        android:hint="@string/txt_password"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_security_24"
        app:startIconTint="@color/deep_purple"
        app:passwordToggleTint="@color/deep_purple">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwd_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_btn"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Do you want to create and account?  "
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/black"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_click_here"
            android:onClick="navOnSignUp"
            android:textStyle="bold|italic"
            android:textColor="@android:color/holo_green_light"
            />
    </LinearLayout>

</LinearLayout>